--- a/resources/style.css
+++ b/resources/style.css
@@ -25,14 +25,11 @@
     font-size: 1em;
     color: black;
     font-weight: bold;
+    cursor: pointer;
   }
 
   nav a:hover{
     text-decoration: underline;
-  }
-
-  #contentFill{
-    margin-left: 10px;
   }
 
 
@@ -94,7 +91,7 @@
     background-size: 100% 100%;
     display: inline-block;
     height: 32px;
-    width: 28px;
+    width: 32px;
     margin-left: 10px;
   }
 
@@ -104,7 +101,7 @@
     background-size: 100% 100%;
     display: inline-block;
     height: 32px;
-    width: 28px;
+    width: 32px;
   }
 
   .fa-email::before{
@@ -113,7 +110,7 @@
     background-size: 100% 100%;
     display: inline-block;
     height: 32px;
-    width: 28px;
+    width: 32px;
   }
 
   #contactIconsRow{
